--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "qrcode": "^1.5.4",
     "radix-ui": "^1.4.3",
     "react": "19.2.3",
+    "react-cookie-consent": "^10.0.1",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.71.1",
     "sonner": "^2.0.7",
